WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172615
ASSERT(m_websiteDataStore->websiteDataStore().sessionID() == m_sessionID) in PageConfiguration::sessionID()
https://bugs.webkit.org/show_bug.cgi?id=172615
Summary
ASSERT(m_websiteDataStore->websiteDataStore().sessionID() == m_sessionID) in ...
Chris Dumez
Reported
2017-05-25 15:24:46 PDT
ASSERT(m_websiteDataStore->websiteDataStore().sessionID() == m_sessionID) is sometimes hit in PageConfiguration::sessionID().
Attachments
Patch
(2.28 KB, patch)
2017-05-25 15:27 PDT
,
Chris Dumez
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-05-25 15:25:00 PDT
<
rdar://problem/32277488
>
Chris Dumez
Comment 2
2017-05-25 15:27:37 PDT
Created
attachment 311302
[details]
Patch
Chris Dumez
Comment 3
2017-05-25 15:33:02 PDT
Comment on
attachment 311302
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311302&action=review
> Source/WebKit2/UIProcess/API/APIPageConfiguration.cpp:158 > + RELEASE_ASSERT(!m_websiteDataStore || m_websiteDataStore->websiteDataStore().sessionID() == m_sessionID || m_sessionID == SessionID::legacyPrivateSessionID());
Didn't mean to make this a RELEASE_ASSERT. Will fix before landing.
Chris Dumez
Comment 4
2017-05-25 15:33:32 PDT
Committed
r217455
: <
http://trac.webkit.org/changeset/217455
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug