ASSERT(m_websiteDataStore->websiteDataStore().sessionID() == m_sessionID) in PageConfiguration::sessionID() https://bugs.webkit.org/show_bug.cgi?id=172615 <rdar://problem/32277488>

Reviewed by Brady Eidson.

Fix assertion added in r215923 to take into account the fact that the PageConfiguration's sessionID
is SessionID::legacyPrivateSessionID() when private browsing is enabled, instead of being the
WebsiteDataStore's sessionID.

See code in WebProcessPool::createWebPage():
"""
pageConfiguration->setSessionID(pageConfiguration->preferences()->privateBrowsingEnabled() ? SessionID::legacyPrivateSessionID() : m_websiteDataStore->websiteDataStore().sessionID());
"""

* UIProcess/API/APIPageConfiguration.cpp:
(API::PageConfiguration::sessionID):

Canonical link: https://commits.webkit.org/189518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217455 268f45cc-cd09-0410-ab3c-d52691b4dbfc